--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#FFFFFFFF</color>
+    <color name="colorPrimaryDark">#FFFFFFFF</color>
+    <color name="colorAccent">#FF4DAF50</color>
+    <color name="button_background_green">#FF4DAF50</color>
+    <color name="button_background_dark_red">#FFC43730</color>
+    <color name="button_background_light_red">#FFEC4A41</color>
+    <color name="text_color_green">#FF4DAF50</color>
+    <color name="text_color_black">#FF000000</color>
+    <color name="text_color_grey">#FF888888</color>
+
 </resources>
