--- a/app/src/main/res/layout/activity_create_garden.xml
+++ b/app/src/main/res/layout/activity_create_garden.xml
@@ -1,74 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:orientation="vertical"
     tools:context=".SplashScreen">
 
     <include layout="@layout/toolbar"/>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:orientation="vertical">
+        android:layout_marginTop="15dp">
 
         <android.support.design.widget.TextInputLayout
+            android:id="@+id/ftNameYourGarden"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
             android:theme="@style/TextLabel">
 
             <android.support.v7.widget.AppCompatEditText
-                android:id="@+id/etFullName"
+                android:id="@+id/etNameYourGarden"
                 style="@style/EditTextStyleBlack"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/full_name"
-                android:inputType="textPersonName"/>
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:theme="@style/TextLabel">
-
-            <android.support.v7.widget.AppCompatEditText
-                android:id="@+id/etPhoneNumber"
-                style="@style/EditTextStyleBlack"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/phone_number"
-                android:inputType="phone"/>
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:theme="@style/TextLabel">
-
-            <android.support.v7.widget.AppCompatEditText
-                android:id="@+id/etEmailAddress"
-                style="@style/EditTextStyleBlack"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/email_address"
-                android:inputType="textEmailAddress"/>
+                android:hint="@string/name_your_garden"/>
         </android.support.design.widget.TextInputLayout>
 
         <Button
-            android:id="@+id/btnSignUp"
-            style="@style/ButtonStyleGreen"
+            android:id="@+id/btnCreateGarden"
+            style="@style/ButtonStyleRed"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="30dp"
-            android:text="@string/sign_up"/>
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="15dp"
+            android:text="@string/create_garden"/>
 
-    </LinearLayout>
-</android.support.design.widget.CoordinatorLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@id/btnCreateGarden"
+            android:layout_below="@id/ftNameYourGarden">
+
+            <fragment
+                android:id="@+id/map"
+                android:name="com.google.android.gms.maps.SupportMapFragment"
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:map="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:context=".MapsActivity"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:src="@drawable/icon_map_pin"/>
+        </RelativeLayout>
+    </RelativeLayout>
+</LinearLayout>
