--- a/app/src/main/res/layout/content_splash_screen.xml
+++ b/app/src/main/res/layout/content_splash_screen.xml
@@ -10,8 +10,8 @@
     tools:showIn="@layout/activity_splash_screen">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_centerInParent="true"
-        android:src="@mipmap/ic_launcher"/>
+        android:src="@drawable/splash_screen"/>
 </RelativeLayout>
