Added Dashboard Layout and Activity class and API call

--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -1,35 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:orientation="vertical"
     tools:context=".SplashScreen">
 
     <include layout="@layout/toolbar"/>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <android.support.design.widget.TextInputLayout
+        <Button
+            android:id="@+id/btnAddNewPlant"
+            style="@style/ButtonStyleWhite"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_margin="10dp"
+            android:text="@string/add_new_plant"/>
+
+        <LinearLayout
+            android:id="@+id/requestLayoutHolder"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
             android:layout_marginTop="10dp"
-            android:theme="@style/TextLabel">
+            android:orientation="horizontal"
+            android:weightSum="2">
 
-            <android.support.v7.widget.AppCompatEditText
-                android:id="@+id/et"
-                style="@style/EditTextStyleBlack"
-                android:layout_width="match_parent"
+            <Button
+                android:id="@+id/btnRequestService"
+                style="@style/ButtonStyleRed"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:hint="@string/name_your_garden"/>
-        </android.support.design.widget.TextInputLayout>
+                android:layout_weight="1"
+                android:text="@string/request_a_service"/>
 
-    </LinearLayout>
-</android.support.design.widget.CoordinatorLayout>
+            <Button
+                android:id="@+id/btnCreateIssue"
+                style="@style/ButtonStyleRed"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/create_an_issue"/>
+        </LinearLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@id/requestLayoutHolder"
+            android:layout_below="@id/btnAddNewPlant"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@color/background_color_white"/>
+    </RelativeLayout>
+</LinearLayout>
