--- a/app/src/main/res/drawable/button_background_white_with_green_border.xml
+++ b/app/src/main/res/drawable/button_background_white_with_green_border.xml
@@ -1,26 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true">
-        <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-            <solid android:color="@color/background_light_gray" />
-            <corners android:radius="5dp" />
-            <stroke android:width="1dp" android:color="@color/primary" />
-
-        </shape>
-    </item>
-    <item android:state_focused="true">
-        <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-            <solid android:color="@color/background_light_gray" />
-            <corners android:radius="5dp" />
-            <stroke android:width="1dp" android:color="@color/primary" />
-
-        </shape>
-    </item>
     <item>
         <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-            <solid android:color="@android:color/white" />
-            <corners android:radius="5dp" />
-            <stroke android:width="1dp" android:color="@color/primary" />
+            <solid android:color="@color/button_background_white"/>
+            <stroke android:width="1dp" android:color="@color/color_green"/>
         </shape>
     </item>
 </selector>
