--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,11 +4,13 @@
     <color name="colorPrimaryDark">#FFFFFFFF</color>
     <color name="colorAccent">#FF4DAF50</color>
     <color name="button_background_green">#FF4DAF50</color>
+    <color name="button_background_white">#FFFFFFFF</color>
     <color name="button_background_dark_red">#FFC43730</color>
     <color name="button_background_light_red">#FFEC4A41</color>
     <color name="text_color_green">#FF4DAF50</color>
     <color name="text_color_black">#FF000000</color>
     <color name="text_color_grey">#FF888888</color>
     <color name="text_color_white">#FFFFFFFF</color>
-
+    <color name="color_green">#FF4DAF50</color>
+    <color name="background_color_white">#FFFFFFFF</color>
 </resources>
