--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -23,12 +23,13 @@
             android:background="@drawable/button_background_white_with_green_border">
 
             <Button
+                style="?android:attr/borderlessButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
+                android:clickable="false"
                 android:drawableLeft="@drawable/icon_add"
                 android:drawablePadding="5dp"
-                android:style="?android:attr/borderlessButtonStyle"
                 android:text="@string/add_new_plant"
                 android:textColor="@color/text_color_green"/>
         </RelativeLayout>
@@ -55,6 +56,7 @@
                 style="@style/ButtonStyleRed"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="1dp"
                 android:layout_weight="1"
                 android:text="@string/create_an_issue"/>
         </LinearLayout>
@@ -64,7 +66,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@id/requestLayoutHolder"
-            android:layout_below="@id/btnAddNewPlant"
+            android:layout_below="@id/rlAddNewPlant"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:background="@color/background_color_white"/>
