--- a/app/src/main/res/layout/grid_item_dashboard.xml
+++ b/app/src/main/res/layout/grid_item_dashboard.xml
@@ -3,7 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dp"
     android:orientation="vertical">
 
     <ImageView
@@ -16,6 +15,7 @@
         android:id="@+id/tvTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
         android:singleLine="true"
         android:textColor="@color/text_color_black"
         android:textSize="16sp"/>
@@ -24,6 +24,7 @@
         android:id="@+id/tvDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
         android:ellipsize="end"
         android:maxLines="3"
         android:textColor="@color/text_color_grey"
