Minor fixes and theming

--- a/app/src/main/res/layout/activity_add_plant.xml
+++ b/app/src/main/res/layout/activity_add_plant.xml
@@ -66,7 +66,8 @@
                         style="@style/EditTextStyleBlack"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/description"/>
+                        android:hint="@string/description"
+                        android:imeOptions="actionGo"/>
                 </android.support.design.widget.TextInputLayout>
 
                 <TextView
