--- a/app/src/main/res/layout/image_text_list_item.xml
+++ b/app/src/main/res/layout/image_text_list_item.xml
@@ -11,7 +11,6 @@
         android:layout_height="60dp"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="10dp"
         android:src="@drawable/logo"/>
 
 
@@ -21,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
         android:textAppearance="@android:style/TextAppearance.Small"
         android:textColor="@color/text_color_grey"/>
 
