--- a/app/src/main/res/layout/activity_service_issues_list.xml
+++ b/app/src/main/res/layout/activity_service_issues_list.xml
@@ -26,15 +26,14 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
-        style="?android:attr/borderlessButtonStyle"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_gravity="bottom|end"
         android:layout_marginBottom="20dp"
         android:layout_marginRight="20dp"
-        android:src="@drawable/button_new_rounded_red"
-        app:backgroundTint="@android:color/transparent"
+        android:backgroundTint="@color/button_background_dark_red"
+        android:src="@drawable/ic_action_new"
         app:borderWidth="0dp"
         app:elevation="6dp"
         app:fabSize="normal"/>
