--- a/app/src/main/res/layout/activity_service_issues_list.xml
+++ b/app/src/main/res/layout/activity_service_issues_list.xml
@@ -27,8 +27,8 @@
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_marginBottom="20dp"
         android:layout_marginRight="20dp"
