--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:orientation="vertical"
-    tools:context=".SplashScreen">
+    tools:context=".DashboardActivity">
 
     <include layout="@layout/toolbar"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <RelativeLayout
             android:id="@+id/rlAddNewPlant"
@@ -68,7 +69,6 @@
             android:layout_above="@id/requestLayoutHolder"
             android:layout_below="@id/rlAddNewPlant"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:background="@color/background_color_white"/>
+            android:layout_marginRight="10dp"/>
     </RelativeLayout>
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
