--- a/app/src/main/res/layout/grid_item_dashboard.xml
+++ b/app/src/main/res/layout/grid_item_dashboard.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background_color_white"
     android:orientation="vertical">
 
     <ImageView
@@ -27,6 +28,7 @@
         android:layout_marginLeft="10dp"
         android:ellipsize="end"
         android:maxLines="3"
+        android:paddingBottom="5dp"
         android:textColor="@color/text_color_grey"
         android:textSize="12sp"/>
 
