--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -15,60 +15,65 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <RelativeLayout
-            android:id="@+id/rlAddNewPlant"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_margin="10dp"
-            android:background="@drawable/button_background_white_with_green_border">
-
-            <Button
-                style="?android:attr/borderlessButtonStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:clickable="false"
-                android:drawableLeft="@drawable/icon_add"
-                android:drawablePadding="5dp"
-                android:text="@string/add_new_plant"
-                android:textColor="@color/text_color_green"/>
-        </RelativeLayout>
-
         <LinearLayout
-            android:id="@+id/requestLayoutHolder"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal"
-            android:weightSum="2">
-
-            <Button
-                android:id="@+id/btnRequestService"
-                style="@style/ButtonStyleRed"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/request_a_service"/>
-
-            <Button
-                android:id="@+id/btnCreateIssue"
-                style="@style/ButtonStyleRed"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="1dp"
-                android:layout_weight="1"
-                android:text="@string/create_an_issue"/>
-        </LinearLayout>
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@id/requestLayoutHolder"
-            android:layout_below="@id/rlAddNewPlant"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"/>
+            android:layout_alignParentTop="true"
+            android:layout_marginBottom="45dp"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:id="@+id/rlAddNewPlant"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_margin="10dp"
+                android:background="@drawable/button_background_white_with_green_border">
+
+                <Button
+                    style="?android:attr/borderlessButtonStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:clickable="false"
+                    android:drawableLeft="@drawable/icon_add"
+                    android:drawablePadding="5dp"
+                    android:text="@string/add_new_plant"
+                    android:textColor="@color/text_color_green"/>
+            </RelativeLayout>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"/>
+        </LinearLayout>
     </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/requestLayoutHolder"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_gravity="bottom|end"
+        android:orientation="horizontal"
+        android:weightSum="2">
+
+        <Button
+            android:id="@+id/btnRequestService"
+            style="@style/ButtonStyleRed"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="@string/request_a_service"/>
+
+        <Button
+            android:id="@+id/btnCreateIssue"
+            style="@style/ButtonStyleRed"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="1dp"
+            android:layout_weight="1"
+            android:text="@string/create_an_issue"/>
+    </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
