Added selector for white button and fixes

--- a/app/src/main/res/layout/activity_request_service.xml
+++ b/app/src/main/res/layout/activity_request_service.xml
@@ -119,6 +119,7 @@
                         android:background="@drawable/button_background_white_with_green_border">
 
                         <Button
+                            android:background="@null"
                             style="?android:attr/borderlessButtonStyle"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -140,6 +141,7 @@
                         android:background="@drawable/button_background_white_with_green_border">
 
                         <Button
+                            android:background="@null"
                             style="?android:attr/borderlessButtonStyle"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
