--- a/app/src/main/res/layout/activity_create_issue.xml
+++ b/app/src/main/res/layout/activity_create_issue.xml
@@ -21,7 +21,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_marginTop="15dp"
             android:text="@string/create_issue"/>
 
         <ScrollView
@@ -123,6 +122,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
+                            android:background="@null"
                             android:clickable="false"
                             android:drawableLeft="@drawable/icon_camera"
                             android:drawablePadding="5dp"
@@ -144,6 +144,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
+                            android:background="@null"
                             android:clickable="false"
                             android:drawableLeft="@drawable/icon_gallery"
                             android:drawablePadding="5dp"
