Refactoring and modifications
Changed class name from PlantDescriptionActivity to PlantDetailsActivity

Modified button name to Add Log instead of Service Request

--- a/app/src/main/res/layout/activity_plant_details.xml
+++ b/app/src/main/res/layout/activity_plant_details.xml
@@ -50,7 +50,7 @@
         android:weightSum="2">
 
         <Button
-            android:id="@+id/btnRequestService"
+            android:id="@+id/btnAddLog"
             style="@style/ButtonStyleRed"
             android:layout_width="0dp"
             android:layout_height="match_parent"
