--- a/app/src/main/res/layout/activity_create_log.xml
+++ b/app/src/main/res/layout/activity_create_log.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background_color_light_grey"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
     tools:context=".SplashScreen">
