--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -89,7 +89,7 @@
                 style="@style/EditTextStyleBlackSingleLine"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/phone_number"
+                android:hint="@string/referred_by"
                 android:inputType="phone"
                 android:maxLength="10"/>
         </android.support.design.widget.TextInputLayout>
