--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/background_color_light_grey"
     android:fitsSystemWindows="true"
-    tools:context=".SplashScreen">
+    tools:context=".activities.SignUpActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
