--- a/app/src/main/res/layout/activity_create_log.xml
+++ b/app/src/main/res/layout/activity_create_log.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_color_light_grey"
     android:fitsSystemWindows="true"
-    android:orientation="vertical"
-    tools:context=".SplashScreen">
+    android:orientation="vertical">
 
     <include layout="@layout/toolbar"/>
 
