--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@color/background_color_light_grey"
     android:fitsSystemWindows="true"
-    tools:context=".DashboardActivity">
+    tools:context=".activities.DashboardActivity">
 
     <include layout="@layout/toolbar"/>
 
