--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_color_light_grey"
-    tools:context=".SplashScreen">
+    tools:context=".activities.SignInActivity">
 
 
     <LinearLayout
