--- a/app/src/main/res/layout/empty_issue_or_service_view.xml
+++ b/app/src/main/res/layout/empty_issue_or_service_view.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_color_light_grey"
     android:fitsSystemWindows="true">
 
-    <include layout="@layout/toolbar" />
+    <include layout="@layout/toolbar"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,7 +21,7 @@
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"/>
 
         <TextView
             android:id="@+id/textView1"
@@ -30,7 +31,7 @@
             android:layout_marginTop="@dimen/margin_10"
             android:text="@string/no_issues"
             android:textColor="@color/text_color_black"
-            android:textSize="18sp" />
+            android:textSize="18sp"/>
 
         <TextView
             android:id="@+id/textView2"
@@ -42,7 +43,7 @@
             android:layout_marginTop="@dimen/margin_10"
             android:gravity="center_horizontal"
             android:text="@string/no_issues_desc"
-            android:textColor="@color/text_color_grey" />
+            android:textColor="@color/text_color_grey"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -54,7 +55,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:text="@string/tap_below"
-                android:textColor="@color/text_color_grey" />
+                android:textColor="@color/text_color_grey"/>
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -62,12 +63,12 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="8dp"
-                android:src="@drawable/down_arrow" />
+                android:src="@drawable/down_arrow"/>
         </RelativeLayout>
 
     </LinearLayout>
 
-    <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
+    <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -78,6 +79,6 @@
         android:src="@drawable/ic_action_new"
         app:borderWidth="0dp"
         app:elevation="6dp"
-        app:fabSize="normal" />
+        app:fabSize="normal"/>
 
 </android.support.design.widget.CoordinatorLayout>
