--- a/app/src/main/res/layout/grid_item_dashboard.xml
+++ b/app/src/main/res/layout/grid_item_dashboard.xml
@@ -16,7 +16,9 @@
         android:id="@+id/tvTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="@dimen/margin_10"
+        android:layout_marginRight="@dimen/margin_10"
+        android:ellipsize="end"
         android:singleLine="true"
         android:textColor="@color/text_color_black"
         android:textSize="16sp"/>
@@ -25,7 +27,8 @@
         android:id="@+id/tvDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="@dimen/margin_10"
+        android:layout_marginRight="@dimen/margin_10"
         android:ellipsize="end"
         android:maxLines="3"
         android:paddingBottom="5dp"
