--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,6 +27,7 @@
     <style name="EditTextStyleBlack">
         <item name="android:layout_marginTop">10dp</item>
         <item name="android:textColor">@color/text_color_black</item>
+        <item name="android:inputType">textCapSentences</item>
     </style>
 
     <style name="TextLabel" parent="TextAppearance.AppCompat">
