--- a/app/src/main/res/layout/activity_general_details.xml
+++ b/app/src/main/res/layout/activity_general_details.xml
@@ -60,6 +60,26 @@
                     android:textColor="@color/text_color_black"
                     android:textSize="16sp"/>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/status"/>
+
+                    <TextView
+                        android:id="@+id/tvStatus"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
                 <TextView
                     android:id="@+id/tvDescription"
                     android:layout_width="wrap_content"
