--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,8 @@
     <color name="view_background_color_grey_translucent">#DFFFFFFF</color>
     <color name="divider_color_grey">#FFDDDDDD</color>
 
+    <color name="status_open">#FFFF5468</color>
+    <color name="status_progress">#FFFABE4D</color>
+    <color name="status_done">#FF4DFA90</color>
+
 </resources>
